--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         applicationId "com.example.oculus"
         minSdkVersion 21
+        multiDexEnabled = true
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -31,4 +32,21 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //for ocr
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.gms:play-services-vision:20.0.0'
+    //CameraKit
+    implementation 'com.wonderkiln:camerakit:0.13.1'
+    //Waiting Dialoge
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    //Firebase ML Vision
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-core:17.4.1'
+
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.1'
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
