--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.oculus">
 
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <meta-data
@@ -14,6 +15,7 @@
         android:value="ocr" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ObjectDetection"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".ObjectDetection" />
         <activity android:name=".OcrCaptureActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity">
